src/ui/radarr_ui/indexers/snapshots/managarr__ui__radarr_ui__indexers__edit_indexer_ui__edit_indexer_ui_tests__tests__snapshot_tests__edit_indexer_ui_renders_edit_indexer_modal_torrent.snap
---
source: src/ui/radarr_ui/indexers/edit_indexer_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                         ╭────────────────────────────────────────────────  Edit Indexer  ─────────────────────────────────────────────────╮                         
                         │                                                                                                                 │                         
                         │                            ╭─────────────────────────╮                            ╭─────────────────────────╮   │                         
                         │                      Name: │DrunkenSlug              │                       URL: │http://127.0.0.1:9696/1/ │   │                         
                         │                            ╰─────────────────────────╯                            ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │                Enable RSS: │ ✔ │                                         API Key: │someApiKey               │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │   Enable Automatic Search: │ ✔ │                                      Seed Ratio: │ratio                    │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │ Enable Interactive Search: │ ✔ │                                            Tags: │25                       │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                            ╭─────────────────────────╮                                                          │                         
                         │       Indexer Priority ▴▾: │1                        │                                                          │                         
                         │                            ╰─────────────────────────╯                                                          │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                            ╭───────────────────────────╮╭──────────────────────────╮                            │                         
                         │                            │           Save            ││          Cancel          │                            │                         
                         │                            ╰───────────────────────────╯╰──────────────────────────╯                            │                         
                         ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
